--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@material-ui/core": "^4.5.2",
+    "@material-ui/icons": "^4.5.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "16.9.4",
