--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "16.9.1",
     "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.2",
+    "js-levenshtein": "^1.1.6",
     "node-sass": "^4.13.0",
     "notistack": "^0.9.5",
     "query-string": "^6.8.3",
