--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "dependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@material-ui/core": "^4.6.0",
+    "@date-io/date-fns": "^1.3.11",
+    "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.32",
+    "@material-ui/pickers": "^3.2.7",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "16.9.4",
     "@types/react-dom": "16.9.1",
     "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.2",
+    "date-fns": "^2.7.0",
     "js-levenshtein": "^1.1.6",
     "node-sass": "^4.13.0",
-    "notistack": "^0.9.5",
+    "notistack": "^0.9.6",
     "query-string": "^6.8.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -47,6 +51,6 @@
   },
   "devDependencies": {
     "customize-cra": "^0.8.0",
-    "react-app-rewired": "^2.1.4"
+    "react-app-rewired": "^2.1.5"
   }
 }
