--- a/package.json
+++ b/package.json
@@ -3,29 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
     "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "^4.6.1",
+    "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.32",
-    "@material-ui/pickers": "^3.2.7",
+    "@material-ui/lab": "^4.0.0-alpha.33",
+    "@material-ui/pickers": "^3.2.8",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "16.9.4",
     "@types/react-dom": "16.9.1",
-    "@types/react-router": "^5.1.2",
+    "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.2",
-    "date-fns": "^2.7.0",
+    "@types/string-similarity": "^3.0.0",
+    "clsx": "^1.0.4",
+    "date-fns": "^2.8.1",
     "js-levenshtein": "^1.1.6",
     "node-sass": "^4.13.0",
     "notistack": "^0.9.6",
     "query-string": "^6.9.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
+    "string-similarity": "^3.0.0",
     "typescript": "^3.7.2"
   },
   "scripts": {
