Added map on Home Page

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/lab": "^4.0.0-alpha.33",
     "@material-ui/pickers": "^3.2.8",
     "@types/jest": "24.0.18",
+    "@types/leaflet": "^1.5.5",
     "@types/node": "12.7.8",
     "@types/react": "16.9.4",
     "@types/react-dom": "16.9.1",
@@ -20,6 +21,7 @@
     "clsx": "^1.0.4",
     "date-fns": "^2.8.1",
     "js-levenshtein": "^1.1.6",
+    "leaflet": "^1.6.0",
     "node-sass": "^4.13.0",
     "notistack": "^0.9.6",
     "query-string": "^6.9.0",
